2014-01-29 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c, po/*.po: Split large help text in smaller pieces.
	  This is easier for the translators.

2014-01-18 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile, *.mak: Removed MAN_NONLATIN variable.
	* INSTALL.txt: Update section INTERNATIONAL MAN PAGES.

2014-01-10 Erwin Waterlander <waterlan@xs4all.nl>
	* mingw32.mak, mingw64.mak: Update for easier use in MSYS2. Added
	  extra include path to find libintl.h.

2014-01-04 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Also include English manuals in source the package.
	  Adding man files to the source package, which have been generated with
	  a high version of perl/pod2man, is a favour to users, because newer
	  perl/pod2man versions produce better output (also for old systems).
	  Tip from pod2man maintainer Russ Allbery.
	  When you want to generate man pages yourself just run first 'make
	  maintainer-clean'.

2014-01-03 Erwin Waterlander <waterlan@xs4all.nl>
	* man/nl/man1/dos2unix.pod, man/es/man1/dos2unix.pod: Add =encoding
	  latin1 command. Perl 5.18 requires =encoding for all non-ASCII pod
	  files.
	  See also https://rt.cpan.org/Public/Bug/Display.html?id=91805
	  Minimal perl version is now 5.10.1.
	* Makefile: Target clean keeps generated non-English manual files to
	  avoid problems with old perl version. Target maintainer-clean will
	  erase the generated non-English manual files.
	* INSTALL.txt: Update for new required perl version.

2013-12-30 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 6.0.4
	* man/nonlatin/man1/ru/dos2unix.pod: Removed. Russian
	  translation of manual moved to later release.

2013-11-26 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile, common.c: When MinGW-w64 is used for 32 bit, option
	  -V prints (MinGW-w64) for used compiler name.

2013-11-24 Erwin Waterlander <waterlan@xs4all.nl>
	* mingw32.mak: New makefile for MinGW-w64 targeting win32.
	  MinGW-w64 supports Large File Support (LFS) with